# Checkweigher

./: .gitignore  CheckWeigher.py  README.md  __init__.py  config.json  errors.txt  pyproject.toml  requirements.txt
Function/: FileProcess.py  GetConfig.py  LoadData.py  Print.py  ProgressDialog.py  Scale.py  __init__.py
SubFunction/: __init__.py  barcode.py  write_to_excel.py
SubFunction/vb2py/: utils.py
UI/: Calendar.py  CalibTab.py  ChangePd.py  Main.py  SetConfig.py  ShowStamp.py  __init__.py  pic_rc.py
config/: headers.json
data/: Database.xlsx  in.xlsx  ports.txt
output/CheckWeigher/_internal/UI/: Main.py  __init__.py  pic_rc.py
qtdes/: Calendar.ui  CalibTab.ui  ChangePd.ui  Main.ui  SetConfig.ui  ShowStamp.ui  pic.qrc
tab/: Calendar.py  CalibTab.py  ChangePd.py  SetConfig.py  ShowStamp.py  __init__.py
