[project]
name = "checkweigher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altgraph==0.17.4",
    "async-timeout==4.0.3",
    "auto-py-to-exe==2.41.0",
    "bleak==0.22.2",
    "bleak-winrt==1.2.0",
    "bottle==0.13.1",
    "bottle-websocket==0.2.9",
    "cffi==1.17.1",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "eel==0.17.0",
    "et-xmlfile==1.1.0",
    "fonttools==4.53.1",
    "future==1.0.0",
    "gevent==24.2.1",
    "gevent-websocket==0.10.1",
    "greenlet==3.1.0",
    "importlib-metadata==8.5.0",
    "importlib-resources==6.4.5",
    "kiwisolver==1.4.7",
    "mako==1.2.4",
    "markupsafe==2.1.5",
    "matplotlib==3.9.2",
    "minimalmodbus==2.0.1",
    "numpy==1.23.5",
    "openpyxl==3.0.7",
    "packaging==24.1",
    "pandas==1.4.0",
    "pefile==2024.8.26",
    "pillow==10.4.0",
    "polars-lts-cpu==1.6.0",
    "psutil>=7.0.0",
    "pyarrow==13.0.0",
    "pycparser==2.22",
    "pyinstaller==6.10.0",
    "pyinstaller-hooks-contrib==2024.8",
    "pyparsing==3.1.4",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.15.0",
    "pyserial==3.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pywin32==306",
    "pywin32-ctypes==0.2.3",
    "six==1.16.0",
    "telemetrix==1.35",
    "typing-extensions==4.12.2",
    "whichcraft==0.6.1",
    "xlsx2csv==0.8.1",
    "xlsxwriter==3.0.3",
    "xlwings==0.27.15",
    "zipp==3.20.2",
    "zope-event==5.0",
    "zope-interface==7.0.3",
]
